
  Changes:
    - Changed CRT's recipe to take CRT framing and screens.
    - Moved around the items needed in CRT/Oscilliscopes/RCU's.
    - Made Oscilliscopes slightly cheaper. Slightly.
    - Changed polonium reactors to give off pollution.
    - Changed molten-inators to start from 10 pollution/m, and gets to 6p/m at tier 3.

  Fixes:
    - Fixed the science pack item names captilisation.

---------------------------------------------------------------------------------------------------
Version: 0.6.121
Date: 2024-12-06
  The finished update? what am i, a good modder? Update:

  Fixes:
    - Fixed gem leeching not having icons.
    - Fixed garnet dust and garnet dust not being unlockable.

---------------------------------------------------------------------------------------------------
Version: 0.6.120
Date: 2024-12-06
  The breeze flows through the marrow used to type this infinite dance Update:

  Additions:
    - Added the concrete revamp! concrete now takes two steps, first making its slurry and then casting it into the concrete bricks.

  Changes:
    - Changed refined concrete to give a 165% walking speed increase, instead of 150%.

  Fixes:
    - Moved silicone into the correct subgroup.

---------------------------------------------------------------------------------------------------
Version: 0.6.110
Date: 2024-12-05
  The meant to add these at 0.4.6! enjoy! not at all late! Update:

  Additions:
    - Added two new types of wall! Concrete and Bio-walls, both with their own perks and upsides/downsides.
    - Meant to add a concrete revamp, but time! i need to fix errors! Kamaro!, Kamaro! My steps twirl in persistance!

  Fixes:
    - Fixed the atmospheric condenser and the burn-inator having weird/unusable fluidboxes.

---------------------------------------------------------------------------------------------------
Version: 0.6.101
Date: 2024-12-04
  The read the FAQ if you dont like my version numbering Update:

  Fixes: