@@ -18,6 +18,8 @@ Date: 2024-12-08
     - Made Oscilliscopes slightly cheaper. Slightly.
     - Changed polonium reactors to give off pollution.
     - Changed molten-inators to start from 10 pollution/m, and gets to 6p/m at tier 3.
+    - Changed calcite filtering to take 4 seconds instead of 1.3.
+    - Also changed calcite filtering to occsionally give off sea salt.
 
   Fixes:
     - Fixed the science pack item names captilisation.
